WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163943
Non-specialized version of deleteObject should not have template argument
https://bugs.webkit.org/show_bug.cgi?id=163943
Summary
Non-specialized version of deleteObject should not have template argument
Konstantin Tokarev
Reported
2016-10-25 07:10:55 PDT
Fixes compilation of GDIObject.h with MinGW
Attachments
Patch
(1.24 KB, patch)
2016-10-25 07:12 PDT
,
Konstantin Tokarev
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Konstantin Tokarev
Comment 1
2016-10-25 07:12:04 PDT
Created
attachment 292751
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-25 08:55:00 PDT
Comment on
attachment 292751
[details]
Patch Clearing flags on attachment: 292751 Committed
r207819
: <
http://trac.webkit.org/changeset/207819
>
WebKit Commit Bot
Comment 3
2016-10-25 08:55:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug