Non-specialized version of deleteObject should not have template argument https://bugs.webkit.org/show_bug.cgi?id=163943

Reviewed by Anders Carlsson.

Fixes compilation of GDIObject.h with MinGW

* wtf/win/GDIObject.h:
(WTF::deleteObject):


Canonical link: https://commits.webkit.org/181676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207819 268f45cc-cd09-0410-ab3c-d52691b4dbfc